Added first post "Experiment with Google Web Inspector" and deleted the "Welcome to Jekyll" post

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Sonda_Sengupta
+title: Sonda Sengupta
 email: sondasengupta.github.io
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
