--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,7 @@
 # Site settings
-title: Sonda Sengupta
-email: sondasengupta.github.io
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.This is it.
+title: "Sonda Sengupta"
+email: "sondasengupta@example.com"
+description: This is Sonda's personal page. Feel free to browse.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "sondasengupta.github.io"
 
@@ -14,4 +11,4 @@ github_username:  sondasengupta
 # Build settings
 markdown: kramdown
 
-#highlighter: rouge
+highlighter: rouge
